Supported bound data columns and added backward compatibility.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2183,7 +2183,8 @@ Element.ReportItem.height=Height
 Element.ReportItem.width=Width
 Element.ReportItem.visibility=Visibility  
 Element.ReportItem.paramBindings=Parameter bindings  
-Element.ReportItem.refTemplateParameter=Referred Template Parameter Definition
+Element.ReportItem.refTemplateParameter=Referred template parameter definition
+Element.ReportItem.boundDataColumns=Bound data columns
   
 #11.Label  ( prefix  Element.Label )
 Element.Label.text=Text
@@ -2215,7 +2216,7 @@ Element.FreeForm.slot.reportItems=Report Items
 Element.Container.slot.reportItems=Report Items
   
 #13.Data  ( prefix  Element.Data )
-Element.Data.valueExpr=Value expression 
+Element.Data.resultSetColumn=Result set column
 Element.Data.helpText=Help text
 Element.Data.helpTextID=Help text key
 Element.Data.action=Action
@@ -2280,6 +2281,7 @@ Element.ListingGroup.onRow.toolTip=Called for each row retrieved from the data s
 Element.ListingGroup.onFinish=On finish
 Element.ListingGroup.onFinish.toolTip=Called after the last row is read from the data set for this element, but before the footer band is created
 Element.ListingGroup.sortType=Sort type
+Element.ListingGroup.boundDataColumns=Bound data columns
   
 #16.List  ( prefix  Element.List )
 Element.List.slot.header=Header
@@ -2955,6 +2957,7 @@ Error.SemanticError.INVALID_PROPERTY_BINDING_ID=The property binding "{1}" in {0
 Error.SemanticError.PROPERTY_BINDING_FORBIDDEN=The element "{0}" is not in the design tree, so it can not set any property binding.
 Error.SemanticError.INVALID_MASTER_PAGE_CONTEXT_CONTAINMENT=Table or list is not allowed directly or indirectly inside the master page "{0}". 
 Error.SemanticError.DATA_SET_MISSED_IN_JOINT_DATA_SET = The data set "{1}" is missed in joint data set "{0}".
+Error.SemanticError.MISSING_COLUMN_BINDING = The column binding for the data "{0}" with column name "{1}" is not defined.
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
