Added visibility property for column.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2362,6 +2362,7 @@ Element.Column.repeat=Repeat
 Element.Column.width=Width
 Element.Column.alignment=Alignment
 Element.Column.suppressDuplicates=Suppress duplicates
+Element.Column.visibility=Visibility
   
 #21.Row  ( prefix  Element.Row )
 Element.Row.visibility=Visibility
