--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -136,7 +136,7 @@ data.engine.InconvertibleDatatype=The original dataType of value {0} is {1} whic
 data.engine.ConvertToDataTypeError={0} can not be converted to {1}.
 data.engine.NoRowUpdate=Data row cannot be updated at this time.
 data.engine.BadDataType=Data type is not supported.
-
+data.engine.BadDataExpression=Data Expression should not be null.
 # oda consumer errors
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position is 1-based and cannot be less than 1.
