The new way to support the backward compatibility of bound data columns.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2071,6 +2071,7 @@ Element.ScalarParameter.selectionList.fixedOrder=Fixed order
 Element.ScalarParameter.selectionList.selectionList=Selection list
 Element.ScalarParameter.promptText=Prompt text
 Element.ScalarParameter.listLimit=List limit
+Element.ScalarParameter.boundDataColumns=Bound data columns
   
 #8. ParameterGroup  ( prefix  Element.ParameterGroup )
 Element.ParameterGroup.startExpanded=Start expanded
