--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -81,6 +81,9 @@ data.engine.EmptyExpression=The expression cannot be null or empty.
 data.engine.InvalidJoinType=Invalid join type.
 data.engine.InvalidJoinOperator=Invalid join operator.
 
+#column binding
+data.engine.InvalidBoundColumnName=Invalid bound column name: {0}.
+
 #computed column value
 data.engine.BadCompColExpr=The expression for computed column "{0}" is not valid.
 data.engine.CompCol.WrongDataType=The data type of computed column "{0}" is {1}, but one of its value is "{2}", which cannot be converted to {1}.
