Support a new report item for Engine to get total page count for all output formats in header/footer the master page.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1870,6 +1870,7 @@ Element.Style=Style
 Element.MasterPage=MasterPage
 Element.ReportItem=Report Item
 Element.Label=Label
+Element.AutoText=AutoText
 Element.FreeForm=FreeForm
 Element.Data=Data
 Element.Text=Text
@@ -2180,7 +2181,7 @@ Element.ReportItem.visibility=Visibility
 Element.ReportItem.paramBindings=Parameter bindings  
 Element.ReportItem.refTemplateParameter=Referred template parameter definition
 Element.ReportItem.boundDataColumns=Bound data columns
-  
+
 #11.Label  ( prefix  Element.Label )
 Element.Label.text=Text
 Element.Label.textID=Text key
@@ -2611,6 +2612,9 @@ Element.JointDataSet.joinConditions=Join conditions
 
 #43. TemplateReportItem
 Element.TemplateReportItem.visibility=Visibility
+
+#44.AutoText ( prefix Element.AutoText )
+Element.AutoText.type = type of autotext
 
 ###########################################################
 # Predefined style
