Supports a new report item for Engine to get total page count for all output formats in header/footer the master page.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -510,6 +510,10 @@ Choices.actionTargetFileType.report-document=Report Document
 Choices.actionBookmarkType.bookmark=Bookmark
 Choices.actionBookmarkType.toc=Table of Content
 
+#66. autoTextType
+Choices.autoTextType.page-number=Page Number
+Choices.autoTextType.total-page=Total Page
+
 ###########################################################
 # Classes
 
