Added promptText property to CascadingParameterGroup.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2080,8 +2080,8 @@ Element.ParameterGroup.slot.parameters=Parameters
 
 # CascadingParameterGroup (prefix Element.CascadingParameterGroup)
 Element.Element.CascadingParameterGroup.dataSet=Data set
+Element.CascadingParameterGroup.promptText=Prompt text
 Element.CascadingParameterGroup.slot.parameters=Parameters
-
 
 #9. MasterPage ( Prefix = Element.MasterPage )
 Element.MasterPage.type=Type
