[136259]Data binding, modify dataSetRow to row, NPE will thrown out.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -83,7 +83,8 @@ data.engine.InvalidJoinOperator=Invalid join operator.
 
 #column binding
 data.engine.InvalidBoundColumnName=Invalid bound column name: {0}.
-
+data.engine.InvalidGroupKey=Group key "{0}" in group {1} cannot depend on column bindings defined in the group lower than itself. 
+data.engine.ColumnBindingCycle=Column binding "{0}" has dependency cycle.
 #computed column value
 data.engine.BadCompColExpr=The expression for computed column "{0}" is not valid.
 data.engine.CompCol.WrongDataType=The data type of computed column "{0}" is {1}, but one of its value is "{2}", which cannot be converted to {1}.
