Added new property and provide compatibility for flatfile extensions.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -514,6 +514,10 @@ Choices.actionBookmarkType.toc=Table of Content
 Choices.autoTextType.page-number=Page Number
 Choices.autoTextType.total-page=Total Page
 
+#67. dataSetMode
+Choices.dataSetMode.single=Single data set
+Choices.dataSetMode.multiple=Multiple data set
+
 ###########################################################
 # Classes
 
@@ -2081,6 +2085,7 @@ Element.ParameterGroup.slot.parameters=Parameters
 # CascadingParameterGroup (prefix Element.CascadingParameterGroup)
 Element.Element.CascadingParameterGroup.dataSet=Data set
 Element.CascadingParameterGroup.promptText=Prompt text
+Element.CascadingParameterGroup.dataSetMode=Single or multiple data sets
 Element.CascadingParameterGroup.slot.parameters=Parameters
 
 #9. MasterPage ( Prefix = Element.MasterPage )
