Support data engine running in console mode

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -103,6 +103,9 @@ data.engine.BadDestIndex=The value {0} of destIndex is not valid. It should be b
 data.engine.WriteTempError=Exception in writing temporary file for large data set.
 data.engine.ReadTempError=Exception in reading temporary file for large data set.
 
+#load data engine factory exception
+load.factory.error=There is an error in loading the factory of data engine.
+
 # Wrapped Error
 data.engine.DataConversionError=An error happened in data type conversion.
 data.engine.BadDataTypeCondExpr=Invalid data type found in conditional expression.
