--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2967,6 +2967,7 @@ Error.SemanticError.PROPERTY_BINDING_FORBIDDEN=The element "{0}" is not in the d
 Error.SemanticError.INVALID_MASTER_PAGE_CONTEXT_CONTAINMENT=Table or list is not allowed directly or indirectly inside the master page "{0}". 
 Error.SemanticError.DATA_SET_MISSED_IN_JOINT_DATA_SET = The data set "{1}" is missed in joint data set "{0}".
 Error.SemanticError.MISSING_COLUMN_BINDING = The column binding for the data "{0}" with column name "{1}" is not defined.
+Error.SemanticError.COLUMN_INSERT_FORBIDDEN=The insert operation on the element "{1}" is forbidden.
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
