Catch runtime exception thrown by DriverManager.getConnection, and rethrow it as an  OdaException

--- a/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
@@ -10,6 +10,8 @@ odajdbc.CannotGetConnMetaData=Cannot get connection metadata.
 odajdbc.CannotGetConn=Failed to get connection.
 odajdbc.ConnRollbackError=Connection rollback error.
 
+odajdbc.GetConnectionError=There is an error in get connection, {0}
+
 odajdbc.CannotGetMaxStatements=Cannot get the maximum number of statements from database metadata.
 odajdbc.CannotGetMaxConnections=Cannot get the maximum number of connections from database metadata.
 
