Fix Bug 130685: Add Total.NO_FILTER and Total.CURRENT_GROUP two new total objects.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1345,6 +1345,10 @@ Class.Total=Total(Aggregate) Functions
 Class.Total.toolTip=A holder for the aggregate functions
 Class.Total.OVERALL=OVERALL
 Class.Total.OVERALL.toolTip=A constant used for the group argument that requests the overall total for the data set
+Class.Total.NO_FILTER=NO_FILTER
+Class.Total.NO_FILTER.toolTip=TBD
+Class.Total.CURRENT_GROUP=CURRENT_GROUP
+Class.Total.CURRENT_GROUP.toolTip=TBD
 Class.Total.sum=sum
 Class.Total.sum.toolTip=The sum of a sequence of numbers
 Class.Total.sum.expr=value
