Enhancement to support interactive designer.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -518,6 +518,16 @@ Choices.autoTextType.total-page=Total Page
 Choices.dataSetMode.single=Single data set
 Choices.dataSetMode.multiple=Multiple data set
 
+#68. filterTarget
+Choices.filterTarget.DataSet=Data Set
+Choices.filterTarget.ResultSet=Result Set
+
+#69. viewAction
+Choices.viewAction.NoChange=No Change
+Choices.viewAction.Changed=Changed
+Choices.viewAction.Added=Added
+Choices.viewAction.Deleted=Deleted
+
 ###########################################################
 # Classes
 
@@ -1746,6 +1756,7 @@ Structure.FilterCondition.operator=Operator
 Structure.FilterCondition.expr=Expression
 Structure.FilterCondition.value1=Value 1
 Structure.FilterCondition.value2=Value 2
+Structure.FilterCondition.filterTarget=Filter Target
 
 #10. PropertyMask
 Structure.PropertyMask.name=Name
@@ -2003,6 +2014,7 @@ Element.ReportElement.name=Name
 Element.ReportElement.extends=Extends
 Element.ReportElement.style=Style
 Element.ReportElement.eventHandlerClass=Event handler class
+Element.ReportElement.viewAction=View action
 
 #3. JdbcDataSource  ( prefix  Element.JdbcDataSource )
 Element.JdbcDataSource.url=Url
@@ -2291,6 +2303,7 @@ Element.ListingGroup.onFinish=On finish
 Element.ListingGroup.onFinish.toolTip=Called after the last row is read from the data set for this element, but before the footer band is created
 Element.ListingGroup.sortType=Sort type
 Element.ListingGroup.boundDataColumns=Bound data columns
+Element.ListingGroup.viewAction=View action
   
 #16.List  ( prefix  Element.List )
 Element.List.slot.header=Header
@@ -2372,6 +2385,7 @@ Element.Column.width=Width
 Element.Column.alignment=Alignment
 Element.Column.suppressDuplicates=Suppress duplicates
 Element.Column.visibility=Visibility
+Element.Column.viewAction=View action
   
 #21.Row  ( prefix  Element.Row )
 Element.Row.visibility=Visibility
@@ -2392,6 +2406,7 @@ Element.Row.onRender.toolTip=TBD
 Element.Row.onRender.this=Row instance
 Element.Row.onRender.reportContext=Report context
 Element.Row.suppressDuplicates=Suppress Duplicates
+Element.Row.viewAction=View action
   
 #22.Cell  ( prefix  Element.Cell )
 Element.Cell.column=Column
@@ -2415,6 +2430,7 @@ Element.Cell.onRender=On render
 Element.Cell.onRender.toolTip=TBD
 Element.Cell.onRender.this=Cell instance
 Element.Cell.onRender.reportContext=Report context
+Element.Cell.viewAction=View action
   
 #23.Image  ( prefix  Element.Image )
 Element.Image.altText=Alternative text
