--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1356,9 +1356,9 @@ Class.Total.toolTip=A holder for the aggregate functions
 Class.Total.OVERALL=OVERALL
 Class.Total.OVERALL.toolTip=A constant used for the group argument that requests the overall total for the data set
 Class.Total.NO_FILTER=NO_FILTER
-Class.Total.NO_FILTER.toolTip=TBD
+Class.Total.NO_FILTER.toolTip=A contant used for the filter argument for aggregate functions to indicate that no filter is present
 Class.Total.CURRENT_GROUP=CURRENT_GROUP
-Class.Total.CURRENT_GROUP.toolTip=TBD
+Class.Total.CURRENT_GROUP.toolTip=A constant used for the group argument for aggregate functions to indicate the total is calculated in the innermost group which contains the aggregate
 Class.Total.sum=sum
 Class.Total.sum.toolTip=The sum of a sequence of numbers
 Class.Total.sum.expr=value
@@ -1780,6 +1780,7 @@ Structure.ResultSetColumn.nativeDataType=Native data type code
 Structure.ComputedColumn.name=Column Name
 Structure.ComputedColumn.expression=Expression
 Structure.ComputedColumn.dataType=Data Type
+Structure.ComputedColumn.aggregrateOn=AggregrateOn Expression
 
 #16. ColumnHint
 Structure.ColumnHint.columnName=Column Name
