Fix bugzilla 128550,137850---support runningCount method in total class ; support negative value for margin property.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1373,6 +1373,10 @@ Class.Total.count=count
 Class.Total.count.toolTip=The count of rows
 Class.Total.count.filter=filter
 Class.Total.count.group=group_level
+Class.Total.runningCount=runningCount
+Class.Total.runningCount.toolTip=The count the row index in current group
+Class.Total.runningCount.filter=filter
+Class.Total.runningCount.group=group_level
 Class.Total.countDistinct=countDistinct
 Class.Total.countDistinct.toolTip=The count of distinct values
 Class.Total.countDistinct.expr=value
