Add new aggregations to "total".

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1439,7 +1439,40 @@ Class.Total.last.toolTip=The last value in a sequence
 Class.Total.last.expr=value
 Class.Total.last.filter=filter
 Class.Total.last.group=group_level
-
+Class.Total.rank=rank
+Class.Total.rank.toolTip=Returns the rank of a number, string or date/time value in a series
+Class.Total.rank.expr=value
+Class.Total.rank.ascending=ascending
+Class.Total.percentRank=percentRank
+Class.Total.percentRank.toolTip=Returns the percentage rank of a value
+Class.Total.percentRank.expr=value
+Class.Total.percentile=percentile
+Class.Total.percentile.toolTip=Returns the percentile value
+Class.Total.percentile.expr=value
+Class.Total.percentile.pct=percentage
+Class.Total.quartile=quartile
+Class.Total.quartile.toolTip=Returns the quartile value
+Class.Total.quartile.expr=value
+Class.Total.quartile.quart=quart
+Class.Total.percentSum=percentSum
+Class.Total.percentSum.toolTip=Percentage of total
+Class.Total.percentSum.expr=value
+Class.Total.isTopN=isTopN
+Class.Total.isTopN.toolTip=Returns true if the value is one of the top n values in the group. Returns false otherwise 
+Class.Total.isTopN.expr=value
+Class.Total.isTopN.n=n
+Class.Total.isTopNPercent=isTopNPercent
+Class.Total.isTopNPercent.toolTip=Returns true if the value is one of the top (pct * 100) percent  values in the group. Returns false otherwise
+Class.Total.isTopNPercent.expr=value
+Class.Total.isTopNPercent.pct=percentage
+Class.Total.isBottomN=isBottomN
+Class.Total.isBottomN.toolTip=Returns true if the value is one of the bottom n values in the group. Returns false otherwise
+Class.Total.isBottomN.expr=value
+Class.Total.isBottomN.n=n
+Class.Total.isBottomNPercent=isBottomNPercent
+Class.Total.isBottomNPercent.toolTip=Returns true if the value is one of the bottom (pct * 100) percent values in the group. Returns false otherwise
+Class.Total.isBottomNPercent.expr=value
+Class.Total.isBottomNPercent.pct=percentage
 
 #27. Finance
 
