Fix bugzilla 141709 --- add a resource key for a prompt text of a parameter in order to localize the prompt text.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2127,6 +2127,7 @@ Element.ScalarParameter.selectionList.mustMatch=Must match
 Element.ScalarParameter.selectionList.fixedOrder=Fixed order
 Element.ScalarParameter.selectionList.selectionList=Selection list
 Element.ScalarParameter.promptText=Prompt text
+Element.ScalarParameter.promptTextID=Prompt text key
 Element.ScalarParameter.listLimit=List limit
 Element.ScalarParameter.boundDataColumns=Bound data columns
   
